--- a/src/Applications/ApiGateway/EGT.ApiGateway.csproj
+++ b/src/Applications/ApiGateway/EGT.ApiGateway.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.0.2" />
+    <PackageReference Include="BeetleX.Redis" Version="1.0.0.7" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
     <PackageReference Include="StackExchange.Redis" Version="2.1.58" />
   </ItemGroup>
