--- a/src/Applications/ApiGateway/appsettings.Debug.json
+++ b/src/Applications/ApiGateway/appsettings.Debug.json
@@ -7,7 +7,8 @@
     }
   },
   "RedisConfiguration": {
-    "ConnectionString": "redisServer:6379,password=password"
+    "Host": "redisServer",
+    "Port": 6379
   },
   "SessionConfiguration": {
     "TTL": 5000
