- changed tests to run consecutively

--- a/Tests/EGT.ApiGateway.Tests/EGT.ApiGateway.Tests.csproj
+++ b/Tests/EGT.ApiGateway.Tests/EGT.ApiGateway.Tests.csproj
@@ -15,7 +15,13 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
-
+  
+  <ItemGroup>
+    <None Update="xunit.runner.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  
   <ItemGroup>
     <ProjectReference Include="..\..\src\Applications\ApiGateway\EGT.ApiGateway.csproj" />
   </ItemGroup>
